add typescript, style improvs

--- a/src/styles/repository.scss
+++ b/src/styles/repository.scss
@@ -1,8 +1,12 @@
 section.repository-list {
   margin: 2.5rem;
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 1rem;
 
   h1 {
-    margin-bottom: 1rem;
+    margin: 1rem 0; 
+    text-align: center;
 
     #my_repo {
       text-decoration: none;
