--- a/src/styles/repository.scss
+++ b/src/styles/repository.scss
@@ -27,11 +27,21 @@ section.repository-list {
       border: 1px dashed purple;
       border-radius: 8px;
       padding: 1rem;
+      cursor: default;
 
       
-    -webkit-box-shadow: 1px 3px 4px 0px rgba(0, 0, 0, 0.25);
-    -moz-box-shadow: 1px 3px 4px 0px rgba(0, 0, 0, 0.25);
-    box-shadow: 1px 3px 4px 0px rgba(0, 0, 0, 0.25);
+      -webkit-box-shadow: 1px 3px 4px 0px rgba(0, 0, 0, 0.25);
+      -moz-box-shadow: 1px 3px 4px 0px rgba(0, 0, 0, 0.25);
+      box-shadow: 1px 3px 4px 0px rgba(0, 0, 0, 0.25);
+
+      transition: all .3s ease;
+
+      &:hover {
+        transform: scale(1.01);
+        -webkit-box-shadow: 1px 5px 6px 0px rgba(0, 0, 0, 0.25);
+        -moz-box-shadow: 1px 5px 6px 0px rgba(0, 0, 0, 0.25);
+        box-shadow: 1px 5px 6px 0px rgba(0, 0, 0, 0.25);
+      }
 
       & + li {
         margin-top: 1.2rem;
